tests/paczka1/small_fuzzy/53995090.err
Error in line 4: zbSI8MnººAB A60 33,6
Error in line 2: iirG A74 64,2
Error in line 12: A60 A60 32,9
Error in line 8: iirG A60 95,1
